# app-android

./: .gitignore  .gitmodules  README.md  build.gradle  gradle.properties  settings.gradle
AndroidSwipeLayout/: build.gradle
app/: build.gradle  fabric.properties  google-services.json  proguard-rules.pro
app/src/main/: AndroidManifest.xml
captures/: app-android_2017.04.27_11.25.txt
docs/: fb keyhash.rtf  keystore.jks
gradle/wrapper/: gradle-wrapper.properties
ndkmodule/: build.gradle  gradle.properties
ndkmodule/ndksubmodules/: cflags.mk
ndkmodule/ndksubmodules/1stParty/OpenGL_Loader/: readme.txt
ndkmodule/ndksubmodules/SourceAssets/scenes/: home_theater.bat
ndkmodule/ndksubmodules/Tools/FbxConvert/: Fbx2Raw.cpp  FbxConvert.sln  FbxConvert.vcxproj  FbxConvert.vcxproj.filters  File_Utils.cpp  Image_Utils.cpp  Makefile  Makefile_Linux  Makefile_Mac  Raw2CollisionModel.cpp  Raw2RayTraceModel.cpp  Raw2RenderModel.cpp  RawModel.cpp  TestJSON.cpp  main.cpp  readme.txt
ndkmodule/ndksubmodules/Tools/bin2c/: Makefile  bin2c.sln  bin2c.vcxproj  bin2c.vcxproj.filters  main.cpp
ndkmodule/ndksubmodules/Tools/fontue/: fontue.vcxproj  fontue.vcxproj.filters  main.cpp  path_utils.cpp
ndkmodule/ndksubmodules/VrCapture/: Readme.txt
ndkmodule/src/main/: AndroidManifest.xml
ndkmodule/src/main/jni/: main.c  (+10 more)
optonaut-android-bridge/: build.gradle  gradle.properties
optonaut-android-bridge/src/main/: AndroidManifest.xml
optonaut-android-bridge/src/main/jni/: AlignmentBridge.cpp  CMakeLists.txt  ConvertToStereoBridge.cpp  RecorderBridge.cpp  StitcherBridge.cpp
(+1184 files in other folders)
